# rust-discord-bot

./: .gitignore  Cargo.toml  build.sh
src/: main.rs
src/commands/: ping.rs
